fix(docs): broken link

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -8,6 +8,6 @@ hero:
         file: ../../assets/houston.webp
     actions:
         - text: Documentation
-          link: /api/classes/Client/
+          link: /api/classes/client/
           icon: right-arrow
 ---
