--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -5,9 +5,12 @@ template: splash
 hero:
     tagline: Interact with Discord's API with ease
     image:
-        file: ../../assets/houston.webp
+        file: ../../assets/logo.png
     actions:
-        - text: Documentation
-          link: /api/classes/client/
+        - text: Guide
+          link: /guide/getting-started
+          icon: right-arrow
+        - text: API Reference
+          link: /api/classes/client
           icon: right-arrow
 ---
