docs: rounded logo & favicon

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -5,7 +5,7 @@ template: splash
 hero:
     tagline: Interact with Discord's API with ease
     image:
-        file: ../../assets/logo.png
+        file: ../../assets/logo-round.png
     actions:
         - text: Guide
           link: /guide/getting-started
