docs: update landing page

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -8,9 +8,15 @@ hero:
         file: ../../assets/logo-round.png
     actions:
         - text: Guide
-          link: /guide/getting-started
+          link: guide/getting-started
+          variant: primary
           icon: right-arrow
         - text: API Reference
-          link: /api/classes/client
+          link: api/classes/client
+          variant: primary
           icon: right-arrow
+        - text: npm
+          link: https://npmjs.com/package/guilds.js
+          variant: secondary
+          icon: external
 ---
