docs(guide): fix vscode keyboard shortcut

--- a/docs/src/content/docs/guide/getting-started.mdx
+++ b/docs/src/content/docs/guide/getting-started.mdx
@@ -38,7 +38,7 @@ Initialize a new npm project in that folder:
 
 {/* prettier-ignore */}
 <Aside type="tip">
-    - If you're using Visual Studio Code, press `Ctrl` + `\` to create a new terminal.
+    - If you're using Visual Studio Code, press `Ctrl` + `Backtick` (\`) to create a new terminal.
     - You can stop your bot by pressing `Ctrl` + `C` in the terminal. Make sure you don't have multiple terminal processes running at once!
 </Aside>
 
