docs(guide): update example folder structure

--- a/docs/src/content/docs/guide/getting-started.mdx
+++ b/docs/src/content/docs/guide/getting-started.mdx
@@ -71,6 +71,7 @@ Your bot's folder should look something like this:
 ```
 example-bot
 ├── node_modules
+├── .env
 ├── package-lock.json
 ├── package.json
 └── src
