chore: update description

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -3,7 +3,7 @@ title: guilds.js
 description: Homepage
 template: splash
 hero:
-    tagline: Interact with Discord's API with ease
+    tagline: Node.js library for using the Discord API
     image:
         file: ../../assets/logo-round.png
     actions:
