--- a/docs/src/content/docs/guide/getting-started.mdx
+++ b/docs/src/content/docs/guide/getting-started.mdx
@@ -98,11 +98,11 @@ const client = new Client({
     ],
 });
 
-client.once("ready", (c) => {
+client.events.once("ready", (c) => {
     console.log(`Logged in as ${c.user.tag}!`);
 });
 
-client.on("error", console.error);
+client.events.on("error", console.error);
 
 client.connect();
 ```
