--- a/docs/src/content/docs/guide/getting-started.mdx
+++ b/docs/src/content/docs/guide/getting-started.mdx
@@ -50,7 +50,8 @@ Afterwards, we can install guilds.js (and dotenv for environment variables):
 
 <Aside type="note">
     This guide uses dotenv for clarity. If you don't wish to install dotenv, you can
-    simply pass an argument like `--env-file=.env` when running your bot with Node.js.
+    simply pass an argument like `--env-file=.env` when running your bot with
+    Node.js.
 </Aside>
 
 ```bash
